# Data-Science

onlineShopping/analyse_app/: README.rst  pyproject.toml
onlineShopping/analyse_app/analyse_app/: configurations.py  main.py
onlineShopping/analyse_app/analyse_app/apis/customers/: customers.py  request.py
onlineShopping/analyse_app/analyse_app/database/: connection.py  session_helper.py
onlineShopping/analyse_app/tests/: test_analyse_app.py
onlineShopping/data_pipline_app/: README.rst  pyproject.toml
onlineShopping/data_pipline_app/data_pipline_app/: configurations.py  main.py
onlineShopping/data_pipline_app/data_pipline_app/common/: helpers.py
onlineShopping/data_pipline_app/data_pipline_app/data_load/: main.py
onlineShopping/data_pipline_app/data_pipline_app/data_load/rdbms/ingest/: engine_handler.py  main.py
onlineShopping/data_pipline_app/data_pipline_app/extraction/: __init__.py  handlers.py
onlineShopping/data_pipline_app/data_pipline_app/schema/: column_schema.yaml  df_schema.yaml
onlineShopping/data_pipline_app/data_pipline_app/transform/: handlers.py  main.py  transforms.py
onlineShopping/data_pipline_app/tests/: test_data_pipline_app.py
onlineShopping/database_app/: README.rst  pyproject.toml
onlineShopping/database_app/database_app/: connection.py  main.py
onlineShopping/database_app/database_app/helpers/: manage_table.py
onlineShopping/database_app/database_app/models/: customers.py
onlineShopping/database_app/tests/: test_database_app.py
