[tool.poetry]
name = "data_pipline_app"
version = "0.1.0"
description = ""
authors = ["amaljose <aj4amaljose@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
SQLAlchemy = "^1.4.23"
pyaml = "^21.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
